# IkachanDS

./: .gitignore  CMakeLists.txt  Makefile  Makefile.ds  README.md  imgui.ini  vramtetris.xcf  vramtetrisideally.xcf
.vscode-ds/: c_cpp_properties.json  launch.json
Ikachan/: Boss.h  Dialog.cpp  Dialog.h  Draw.cpp  Draw.h  Draw_nds.cpp  Editor.cpp  Editor.h  Effect.h  EventScript.cpp  EventScript.h  File.cpp  Flags.h  Game.cpp  Game.h  Generic.cpp  Generic.h  Item.cpp  Item.h  Map.cpp  Map.h  NDSSoundSpec.h  NpChar.cpp  NpChar.h  Opening.cpp  Opening.h  PixelScript.cpp  PixelScript.h  PiyoPiyo.cpp  PiyoPiyo.h  Player.cpp  Player.h  Sound.cpp  Sound.cpp.old.cpp  Sound.h  System.cpp  System.h  WindowsWrapper.h  fopen.cpp  fopen.h  (+1 more)
Ikachan/vitaAudio/: vitaAudio.c  vitaAudio.h
game_english/: Event.ptx  Staff.ptx  Words.ptx
game_english/Pbm/: Back.pbm  Bubble.pbm  Carry.pbm  Chibi.pbm  Cursor.pbm  Damage.pbm  Dum.pbm  Editor.pbm  End.pbm  Fade.pbm  Figure.pbm  Hari.pbm  Hoshi.pbm  Ironhead.pbm  Isogin.pbm  Item.pbm  ItemBox.pbm  Juel.pbm  Kani.pbm  LevelUp.pbm  Loading.pbm  Map1.pbm  MaruAme.pbm  Msgbox.pbm  MyChar.pbm  MyChar2.pbm  MyChar3.pbm  NpcType.pbm  Opening.pbm  PrtBlock.pbm  PrtDir.pbm  PrtDmg.pbm  PrtItem.pbm  PrtSnack.pbm  Prtfilt.pbm  Sleep.pbm  Staff.pbm  Star.pbm  Status.pbm  Ufo.pbm  (+1 more)
game_english/Wave/: BASS1.raw  BASS2.raw  BOSSOUCH.raw  CRASH.raw  DASH.raw  DEAD.raw  GO.raw  HAT1.raw  HAT2.raw  HITHEAD.raw  ITEM.raw  LEVELUP.raw  LIFEUP.raw  MESSAGE.raw  NODMG.raw  OUCH.raw  QUAKE.raw  READY.raw  SAVE.raw  SNARE1.raw  SYMBAL1.raw  WIN.raw  YESNO.raw
sce_sys/livearea/contents/: template.xml
srcarm7/: Makefile
srcarm7/src/: audio.c
